ranger: ignore dotfiles git in home directory (slows it done considerably)

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -1,7 +1,7 @@
 # Configuration
 set colorscheme solarized
 set preview_script /usr/share/doc/ranger/config/scope.sh
-set vcs_aware true
+setlocal path=/data/ vcs_aware true
 set preview_images true
 #set preview_images_method w3m
 #set preview_images_method urxvt
