SSH key for c4science

--- a/.ssh/config
+++ b/.ssh/config
@@ -6,6 +6,9 @@ Host github.com
 Host gitlab.com
  IdentityFile ~/.ssh/id_gitlab
 
+Host c4science.ch
+ IdentityFile ~/.ssh/id_c4science
+
 Host lts2.epfl.ch
  IdentityFile ~/.ssh/id_lts2_gitlab
 
