--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -60,8 +60,9 @@ ext pdf,  X, flag f = zathura -- "$@"
 ext pdf,  X, flag f = evince -- "$@"
 ext pdf,  X, flag f = firefox -- "$@"
 ext pdf,  X, flag f = pdfpc   -- "$@"
-ext pdf,  X, flag f = xournal -- "$@"
-ext xoj,  X, flag f = xournal -- "$@"
+ext pdf,  X, flag f = xournalpp -- "$@"
+ext xoj,  X, flag f = xournalpp -- "$@"
+ext xopp, X, flag f = xournalpp -- "$@"
 ext od[dfgpst],               X, flag f = libreoffice "$@"
 ext pptx?|docx?|xlsx?|,       X, flag f = libreoffice "$@"
 ext sxc|xlt|xlw|gnm|gnumeric, X, flag f = libreoffice "$@"
