--- a/.ssh/config
+++ b/.ssh/config
@@ -42,28 +42,28 @@ Host aws
 
 #### LTS2 CDK ####
 
-# Personal instance on cdk8.
+# Personal instance on cdk8 (mdeff_gcnn_2).
 Host cdk1
  Hostname lts2cdk.epfl.ch
  Port 12822
  User ubuntu
  IdentityFile ~/.ssh/id_lts2_cdk
 
-# Yann's instance on cdk9.
+# Yann's instance on cdk9 (YaNN).
 Host cdk2
  Hostname lts2cdk.epfl.ch
  Port 56622
  User mdeff
  IdentityFile ~/.ssh/id_lts2_cdk
 
-# Nathanaël's instance on cdk7.
+# Nathanaël's instance on cdk7 (Nathanael main).
 Host cdk3
  Hostname lts2cdk.epfl.ch
  Port 49022
  User mdeff
  IdentityFile ~/.ssh/id_lts2_cdk
 
-# Youngjoo's instance on cdk.
+# Youngjoo's instance on cdk6 (youngjoo).
 Host cdk4
  Hostname lts2cdk.epfl.ch
  Port 62522
@@ -75,4 +75,11 @@ Host gdk0
  Hostname lts2gdk0.epfl.ch
  Port 22
  User defferra
+ IdentityFile ~/.ssh/id_lts2_cdk
+
+# Personal instance on cdk1 (mdeff_nogpu_1).
+Host cdk5
+ Hostname lts2cdk.epfl.ch
+ Port 24422
+ User ubuntu
  IdentityFile ~/.ssh/id_lts2_cdk
