--- a/.config/swaylock/config
+++ b/.config/swaylock/config
@@ -1,5 +1,7 @@
 daemonize
-color=002b36
-inside-color=002b36
+image=.config/swaylock/black_hole.png
+#color=002b36
+#inside-color=002b36
+#inside-color=000000
 indicator-radius=150
 indicator-thickness=20
