ssh: connect to VPS through IPv6 if possible

--- a/.ssh/config
+++ b/.ssh/config
@@ -20,8 +20,15 @@ Host aur
 #### OVH Virtual Private Server ####
 
 Host vps
+ # IPv4 only
  #Hostname vps262374.ovh.net
- Hostname 164.132.40.229
+ # IPv4 and IPv6, defaults to IPv6
+ Hostname deff.ch
+ #Hostname fanfare-orsonnens.ch
+ # IPv4 of the VPS
+ #Hostname 164.132.40.229
+ # IPv6 of the VPS
+ #Hostname 2001:41d0:302:2000::2478
  Port 22
  User root
  IdentityFile ~/.ssh/id_ovh
