ssh: don't add IPs for github and gitlab

--- a/.ssh/config
+++ b/.ssh/config
@@ -2,9 +2,13 @@
 
 Host github.com
  IdentityFile ~/.ssh/id_github
+ # avoid adding many IPs to known_hosts
+ CheckHostIP no
 
 Host gitlab.com
  IdentityFile ~/.ssh/id_gitlab
+ # avoid adding many IPs to known_hosts
+ CheckHostIP no
 
 Host c4science.ch
  IdentityFile ~/.ssh/id_c4science
