--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -119,6 +119,7 @@ ext obj|off|ply|stl, X, flag f = CloudCompare "$@"
 
 # Molecules and proteins
 ext pdb, X, flag f = pymol "$@"
+ext pse, X, flag f = pymol "$@"
 
 #-------------------------------------------
 # Unknown (text or not)
