--- a/.ssh/config
+++ b/.ssh/config
@@ -16,6 +16,9 @@ Host c4science.ch
 Host lts2.epfl.ch
  IdentityFile ~/.ssh/id_lts2_gitlab
 
+Host git.arcanite.ch
+ IdentityFile ~/.ssh/id_arcanite_gitlab
+
 Host aur
  Hostname aur.archlinux.org
  User aur
