ranger: don't automatically open on match

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -37,5 +37,5 @@ setlocal path=/data/inputs/* sort_reverse false
 setlocal path=/data/inputs/* sort mtime
 
 # Search
-map f console scout -fpait%space
+map f console scout -fpit%space
 set clear_filters_on_dir_change true
