ssh: new LTS2 GPU server

--- a/.ssh/config
+++ b/.ssh/config
@@ -24,6 +24,9 @@ Host aur
  User aur
  IdentityFile ~/.ssh/id_aur
 
+Host git.overleaf.com
+ User m.deff@hotmail.com
+
 #### OVH Virtual Private Server ####
 
 Host vps
@@ -84,9 +87,16 @@ Host cdk4
  User mdeff
  IdentityFile ~/.ssh/id_lts2_cdk
 
-# GPU server.
+# First GPU server (with 4 Nvidia GeForce GTX 1080).
 Host gdk0
  Hostname lts2gdk0.epfl.ch
+ Port 22
+ User defferra
+ IdentityFile ~/.ssh/id_lts2_cdk
+
+# Second GPU server (with 4 Nvidia Tesla K40c).
+Host srv5
+ Hostname lts2srv5.epfl.ch
  Port 22
  User defferra
  IdentityFile ~/.ssh/id_lts2_cdk
