sxiv: play animations (gif)

--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -72,7 +72,7 @@ ext pdf,                      X, flag f = libreoffice "$@"
 #-------------------------------------------
 # Images
 #-------------------------------------------
-mime ^image,     X, flag f = sxiv -- "$@"
+mime ^image,     X, flag f = sxiv -a -- "$@"
 mime ^image,     X, flag f = firefox -- "$@"
 mime ^image,     X, flag f = gimp -- "$@"
 mime ^image,     X, flag f = inkscape -- "$@"
