open electron density maps with chimera or pymol

--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -120,6 +120,9 @@ ext obj|off|ply|stl, X, flag f = CloudCompare "$@"
 # Molecules and proteins
 ext pdb, X, flag f = pymol "$@"
 ext pse, X, flag f = pymol "$@"
+# CCP4 electron density map
+ext mrc, X, flag f = chimera "$@"
+ext mrc, X, flag f = pymol "$@"
 
 #-------------------------------------------
 # Unknown (text or not)
