Only try the identity specified by IdentityFile.
Do not try identities stored by ssh-agent.
Will avoid a "too many authentication failures" error if ssh-agent stores many identities.

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,3 +1,7 @@
+# Only try the identity specified by IdentityFile, do not try identities stored by ssh-agent.
+# Will avoid a "too many authentication failures" error if ssh-agent stores many identities.
+IdentitiesOnly yes
+
 #### Git repositories ####
 
 Host github.com
