ranger: paths are regular expressions

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -33,8 +33,8 @@ map <c-n> eval fm.tab_new('%d')
 
 # Sorting
 set sort_reverse true
-setlocal path=/data/inputs/* sort_reverse false
-setlocal path=/data/inputs/* sort mtime
+setlocal path=/data/inputs sort_reverse false
+setlocal path=/data/inputs sort mtime
 
 # Search
 map f console scout -fpit%space
