update firefox and thunderbird profiles

--- a/.mozilla/firefox/profiles.ini
+++ b/.mozilla/firefox/profiles.ini
@@ -1,5 +1,17 @@
-[General]
-StartWithLastProfile=0
+[Profile3]
+Name=twitter
+IsRelative=1
+Path=twitter
+
+[Profile2]
+Name=whatsapp
+IsRelative=1
+Path=whatsapp
+
+[Profile1]
+Name=notebook
+IsRelative=1
+Path=notebook
 
 [Profile0]
 Name=browsing
@@ -7,17 +19,11 @@ IsRelative=0
 Path=/data/profiles/firefox
 Default=1
 
-[Profile1]
-Name=notebook
-IsRelative=1
-Path=notebook
+[General]
+StartWithLastProfile=0
+Version=2
 
-[Profile2]
-Name=whatsapp
-IsRelative=1
-Path=whatsapp
+[Install4F96D1932A9F858E]
+Default=/data/profiles/firefox
+Locked=1
 
-[Profile3]
-Name=twitter
-IsRelative=1
-Path=twitter
