--- a/.thunderbird/profiles.ini
+++ b/.thunderbird/profiles.ini
@@ -1,8 +1,13 @@
-[General]
-StartWithLastProfile=1
+[InstallFDC34C9F024745EB]
+Default=/data/profiles/thunderbird
 
 [Profile0]
 Name=default
 IsRelative=0
 Path=/data/profiles/thunderbird
 Default=1
+
+[General]
+StartWithLastProfile=1
+Version=2
+
