--- a/.config/sway/config
+++ b/.config/sway/config
@@ -481,7 +481,7 @@ mode "$mode_open" {
 	bindsym v       exec urxvt -e $EDITOR,         					 mode "default"
 	bindsym Shift+v exec virtualbox,               					 mode "default"
 	bindsym x       exec xournalpp,                                  mode "default"
-	bindsym z       exec zotero,                   					 mode "default"
+	bindsym z       exec zoom,                   					 mode "default"
 	bindsym Escape		                           					 mode "default"
 
 	bindsym Shift+c [title=".*"] kill, mode "default"
