--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -33,6 +33,8 @@ ext x?html?, X, flag f = firefox -- "$@"
 #-------------------------------------------
 ext sla,            X, flag f = scribus "$@"
 ext gz, name .*sla, X, flag f = scribus "$@"
+ext mscx, X, flag f = musescore -- "$@"
+ext mscz, X, flag f = musescore -- "$@"
 
 #--------------------------------------------
 # Audio / Video without X
