--- a/.config/sway/config
+++ b/.config/sway/config
@@ -473,11 +473,12 @@ mode "$mode_fs_umount" {
 # Mode: open applications #
 #-------------------------#
 
-set $mode_open Programs: (I) init, (C) close all, (a,b,f,g,G,i,l,m,M,o,p,P,r,R,s,t,v,V,x,z)
+set $mode_open Programs: (I) init, (C) close all, (a,A,b,f,g,G,i,l,m,M,o,p,P,r,R,s,t,v,V,x,z)
 bindsym $mod+o mode "$mode_open"
 
 mode "$mode_open" {
-	bindsym a       exec audacity,									 mode "default"
+	bindsym a mode "$android_control"
+	bindsym Shift+a exec audacity,									 mode "default"
 	bindsym b       exec blender,                  					 mode "default"
 	bindsym f       exec firefox -P browsing,      					 mode "default"
 	bindsym g       exec gimp,                    					 mode "default"
@@ -510,6 +511,14 @@ mode "$mode_open" {
 		$WS2, exec firefox -P browsing, \
 		$WS1, $shell, $shell, \
 		mode "default"
+}
+
+set $android_control Android control: (p) phone TCP, (t) TV TCP, (u) phone USB
+mode "$android_control" {
+	bindsym t exec android-control tv, mode "default"
+	bindsym p exec android-control phone, mode "default"
+	bindsym Shift+p exec android-control phone-usb, mode "default"
+	bindsym Escape mode "default"
 }
 
 #-------------#
