sway: open ipython instead of raw python
It's reasonably fast, compared to jupyter console.

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -490,7 +490,8 @@ mode "$mode_open" {
 	bindsym m       exec urxvt -e ncmpcpp,                           mode "default"
 	bindsym Shift+m exec meshlab,                                    mode "default"
 	bindsym o       exec tor-browser,                                mode "default"
-	bindsym p       exec urxvt -e python -i -c "import numpy as np", mode "default"
+#	bindsym p       exec urxvt -e python -i -c "import numpy as np", mode "default"
+	bindsym p       exec urxvt -e ipython --pylab --no-confirm-exit, mode "default"
 #	bindsym p       exec urxvt -e jupyter console,                   mode "default"
 	bindsym Shift+p exec pavucontrol,                                mode "default"
 	bindsym r       exec urxvt -e ranger /data,                      mode "default"
