ranger: open netcdf with ncview

--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -104,11 +104,6 @@ ext graphml|gml|dot, X, flag f = cytoscape --network "$@"
 ext graphml|gml|dot, X, flag f = socnetv "$@"
 ext cys, X, flag f = cytoscape --session "$@"
 
-# Geographic data (QGIS project file, ESRI shapefile, ...): qgis
-ext qgz, X, flag f = qgis -- "$@"
-ext shp, X, flag f = qgis -- "$@"
-ext kml, X, flag f = qgis -- "$@"
-
 # Point clouds (CloudCompare better than meshlab)
 ext ptx|xyz|pts|las|laz, X, flag f = CloudCompare "$@"
 ext ptx|xyz, X, flag f = meshlab "$@"
@@ -119,12 +114,24 @@ ext obj, X, flag f = blender --python-expr "import bpy, sys; bpy.ops.import_scen
 ext obj|off|ply|stl, X, flag f = CloudCompare "$@"
 #ext obj, X, flag f = blender -- "$@"
 
+#-------------------------------------------
+# Scientific data
+#-------------------------------------------
+
+# Geographic data (QGIS project file, ESRI shapefile, ...): qgis
+ext qgz, X, flag f = qgis -- "$@"
+ext shp, X, flag f = qgis -- "$@"
+ext kml, X, flag f = qgis -- "$@"
+
 # Molecules and proteins
 ext pdb, X, flag f = pymol "$@"
 ext pse, X, flag f = pymol "$@"
 # CCP4 electron density map
 ext mrc, X, flag f = chimera "$@"
 ext mrc, X, flag f = pymol "$@"
+
+# NetCDF
+ext nc, X, flag f = ncview "$@"
 
 #-------------------------------------------
 # Unknown (text or not)
