ranger: open html in new firefox window

--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -26,7 +26,7 @@ ext ipynb, flag t = nbshow -OAMD -- "$@" | $PAGER
 #-------------------------------------------
 # Websites
 #-------------------------------------------
-ext x?html?, X, flag f = firefox -- "$@"
+ext x?html?, X, flag f = firefox --new-window -- "$@"
 
 #-------------------------------------------
 # Others
