musescore opens musicxml

--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -33,6 +33,7 @@ ext x?html?, X, flag f = firefox --new-window -- "$@"
 #-------------------------------------------
 ext sla,            X, flag f = scribus "$@"
 ext gz, name .*sla, X, flag f = scribus "$@"
+ext musicxml, X, flag f = musescore -- "$@"
 ext mscx, X, flag f = musescore -- "$@"
 ext mscz, X, flag f = musescore -- "$@"
 
