--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -36,6 +36,7 @@ ext gz, name .*sla, X, flag f = scribus "$@"
 ext musicxml, X, flag f = musescore -- "$@"
 ext mscx, X, flag f = musescore -- "$@"
 ext mscz, X, flag f = musescore -- "$@"
+ext blend, X, flag f = blender -- "$@"
 
 #--------------------------------------------
 # Audio / Video without X
