mpv: Driver 'opengl' has been replaced with 'gpu'

--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -1,3 +1,2 @@
-# HW video acceleration via VA-API on Intel Graphics
-hwdec=vaapi
-vo=opengl
+hwdec=vaapi  # HW video acceleration via VA-API on Intel Graphics
+vo=gpu
