virtualbox and pymol don't work with wayland

--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -126,11 +126,11 @@ ext shp, X, flag f = qgis -- "$@"
 ext kml, X, flag f = qgis -- "$@"
 
 # Molecules and proteins
-ext pdb, X, flag f = pymol "$@"
-ext pse, X, flag f = pymol "$@"
+ext pdb, X, flag f = env QT_QPA_PLATFORM=xcb pymol "$@"
+ext pse, X, flag f = env QT_QPA_PLATFORM=xcb pymol "$@"
 # CCP4 electron density map
 ext mrc, X, flag f = chimera "$@"
-ext mrc, X, flag f = pymol "$@"
+ext mrc, X, flag f = env QT_QPA_PLATFORM=xcb pymol "$@"
 
 # NetCDF
 ext nc, X, flag f = ncview "$@"
