--- a/.config/sway/config
+++ b/.config/sway/config
@@ -580,9 +580,11 @@ bindsym XF86MonBrightnessDown exec brightness 1%-
 #bindsym XF86AudioRaiseVolume  exec amixer set -D default:PCH Master 5%+
 #bindsym XF86AudioLowerVolume  exec amixer set -D default:PCH Master 5%-
 #bindsym XF86AudioMute         exec amixer set -D default:PCH Master toggle
-set $source alsa_input.pci-0000_00_1b.0.analog-stereo
+#set $source alsa_input.pci-0000_00_1b.0.analog-stereo
+set $source @DEFAULT_SOURCE@
 #set $sink  alsa_output.pci-0000_00_1b.0.analog-stereo
-set $sink $(pactl list short sinks | grep RUNNING | awk '{print $1}')
+#set $sink $(pactl list short sinks | grep RUNNING | awk '{print $1}')
+set $sink @DEFAULT_SINK@
 set $pactl exec pactl
 bindsym XF86AudioRaiseVolume $pactl set-sink-volume $sink +5%
 bindsym XF86AudioLowerVolume $pactl set-sink-volume $sink -5%
