--- a/.config/sway/config
+++ b/.config/sway/config
@@ -301,12 +301,9 @@ bindsym $mod+r mode "resize"
 # Mode: workplace #
 #-----------------#
 
-# Pen sometimes clicks when lid is closed. Wacom ISDv4 EC Pen.
+# Pen sometimes clicks when lid is closed.
 set $pen_on input "1386:236:Wacom_ISDv4_EC_Pen" events enabled
 set $pen_off input "1386:236:Wacom_ISDv4_EC_Pen" events disabled
-# Alternative: assign pen to other seat. Doesn't work either.
-#set $pen_off seat seat1 attach "1386:236:Wacom_ISDv4_EC_Pen"
-#set $pen_on seat seat0 attach "1386:236:Wacom_ISDv4_EC_Pen"
 
 # To set brightness on external monitors through /sys/class/backlight/.
 # Let some time for the monitor to turn on.
