ranger: open asc with meshlab

--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -111,7 +111,7 @@ ext ptx|xyz|pts|las|laz, X, flag f = CloudCompare "$@"
 ext ptx|xyz, X, flag f = meshlab "$@"
 
 # Meshes (meshlab better than blender better than CloudCompare)
-ext obj|off|ply|stl|3ds|qobj|vmi|tri, X, flag f = meshlab "$@"
+ext obj|off|ply|stl|3ds|qobj|vmi|tri|asc, X, flag f = meshlab "$@"
 ext obj, X, flag f = blender --python-expr "import bpy, sys; bpy.ops.import_scene.obj(filepath=sys.argv[-1])" -- "$@"
 ext obj|off|ply|stl, X, flag f = CloudCompare "$@"
 #ext obj, X, flag f = blender -- "$@"
